@@ -13,6 +13,7 @@ import static org.junit.Assert.assertEquals;
 
 import java.io.IOException;
 import java.util.Arrays;
+import java.util.List;
 
 import org.eclipse.jgit.lib.ObjectId;
 import org.eclipse.jgit.lib.ObjectIdRef;
@@ -157,8 +158,8 @@ public class MergeMessageFormatterTest extends SampleDataRepositoryTestCase {
 	public void testFormatWithConflictsNoFooter() {
 		String originalMessage = "Header Line\n\nCommit body\n";
 		String message = formatter.formatWithConflicts(originalMessage,
-				Arrays.asList(new String[] { "path1" }));
-		assertEquals("Header Line\n\nCommit body\n\nConflicts:\n\tpath1\n",
+				List.of("path1"), '#');
+		assertEquals("Header Line\n\nCommit body\n\n# Conflicts:\n#\tpath1\n",
 				message);
 	}
 
@@ -166,8 +167,17 @@ public class MergeMessageFormatterTest extends SampleDataRepositoryTestCase {
 	public void testFormatWithConflictsNoFooterNoLineBreak() {
 		String originalMessage = "Header Line\n\nCommit body";
 		String message = formatter.formatWithConflicts(originalMessage,
-				Arrays.asList(new String[] { "path1" }));
-		assertEquals("Header Line\n\nCommit body\n\nConflicts:\n\tpath1\n",
+				List.of("path1"), '#');
+		assertEquals("Header Line\n\nCommit body\n\n# Conflicts:\n#\tpath1\n",
+				message);
+	}
+
+	@Test
+	public void testFormatWithConflictsCustomCharacter() {
+		String originalMessage = "Header Line\n\nCommit body";
+		String message = formatter.formatWithConflicts(originalMessage,
+				List.of("path1"), ';');
+		assertEquals("Header Line\n\nCommit body\n\n; Conflicts:\n;\tpath1\n",
 				message);
 	}
 
@@ -176,9 +186,9 @@ public class MergeMessageFormatterTest extends SampleDataRepositoryTestCase {
 		String originalMessage = "Header Line\n\nCommit body\n\nChangeId:"
 				+ " I123456789123456789123456789123456789\nBug:1234567\n";
 		String message = formatter.formatWithConflicts(originalMessage,
-				Arrays.asList(new String[] { "path1" }));
+				List.of("path1"), '#');
 		assertEquals(
-				"Header Line\n\nCommit body\n\nConflicts:\n\tpath1\n\n"
+				"Header Line\n\nCommit body\n\n# Conflicts:\n#\tpath1\n\n"
 						+ "ChangeId: I123456789123456789123456789123456789\nBug:1234567\n",
 				message);
 	}
@@ -188,9 +198,9 @@ public class MergeMessageFormatterTest extends SampleDataRepositoryTestCase {
 		String originalMessage = "Header Line\n\nCommit body\nBug:1234567\nMore Body\n\nChangeId:"
 				+ " I123456789123456789123456789123456789\nBug:1234567\n";
 		String message = formatter.formatWithConflicts(originalMessage,
-				Arrays.asList(new String[] { "path1" }));
+				List.of("path1"), '#');
 		assertEquals(
-				"Header Line\n\nCommit body\nBug:1234567\nMore Body\n\nConflicts:\n\tpath1\n\n"
+				"Header Line\n\nCommit body\nBug:1234567\nMore Body\n\n# Conflicts:\n#\tpath1\n\n"
 						+ "ChangeId: I123456789123456789123456789123456789\nBug:1234567\n",
 				message);
 	}
